<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDDED7"
    tools:context=".QSet1Activity">

    <!--ImageView to add background and a ScrollView over it-->
    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/android_oreo_bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_176dp"
            android:orientation="vertical">
            <!--Four set of CardView which displays questions having parametric values
            stored in res/values/... where required-->

            <android.support.v7.widget.CardView style="@style/CardView.Question">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/que_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif-light"
                        android:padding="@dimen/dimen_16dp"
                        android:text="@string/que1"
                        android:textSize="@dimen/dimen_24sp" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/que_1"
                        android:layout_marginBottom="@dimen/dimen_16dp"
                        android:layout_marginStart="@dimen/dimen_16dp">

                        <RadioButton
                            android:id="@+id/ans1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dimen_8dp"
                            android:padding="@dimen/dimen_4dp"
                            android:text="@string/_48dp" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dimen_8dp"
                            android:padding="@dimen/dimen_4dp"
                            android:text="@string/_56sp" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dimen_8dp"
                            android:padding="@dimen/dimen_4dp"
                            android:text="@string/_72in" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/dimen_4dp"
                            android:text="@string/_24px" />
                    </RadioGroup>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView style="@style/CardView.Question">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/que_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif-light"
                        android:padding="@dimen/dimen_16dp"
                        android:text="@string/que2"
                        android:textSize="@dimen/dimen_24sp" />

                    <CheckBox
                        android:id="@+id/ans2a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_8dp"
                        android:layout_marginStart="@dimen/dimen_16dp"
                        android:padding="@dimen/dimen_4dp"
                        android:text="@string/rgb" />

                    <CheckBox
                        android:id="@+id/ans2b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_8dp"
                        android:layout_marginStart="@dimen/dimen_16dp"
                        android:padding="@dimen/dimen_4dp"
                        android:text="@string/rrggbb" />

                    <CheckBox
                        android:id="@+id/ans2c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_8dp"
                        android:layout_marginStart="@dimen/dimen_16dp"
                        android:padding="@dimen/dimen_4dp"
                        android:text="@string/argb" />

                    <CheckBox
                        android:id="@+id/ans2d"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_8dp"
                        android:layout_marginStart="@dimen/dimen_16dp"
                        android:padding="@dimen/dimen_4dp"
                        android:text="@string/aarrggbb" />

                    <CheckBox
                        android:id="@+id/ans2e"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dimen_16dp"
                        android:layout_marginStart="@dimen/dimen_16dp"
                        android:padding="@dimen/dimen_4dp"
                        android:text="@string/none_of_these" />


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView style="@style/CardView.Question">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/que_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif-light"
                        android:padding="@dimen/dimen_16dp"
                        android:text="@string/que3"
                        android:textSize="@dimen/dimen_24sp" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/que_3"
                        android:layout_marginBottom="@dimen/dimen_16dp"
                        android:layout_marginStart="@dimen/dimen_16dp">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dimen_8dp"
                            android:padding="@dimen/dimen_4dp"
                            android:text="@string/opt3a" />

                        <RadioButton
                            android:id="@+id/ans3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dimen_8dp"
                            android:padding="@dimen/dimen_4dp"
                            android:text="@string/opt3b" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dimen_8dp"
                            android:padding="@dimen/dimen_4dp"
                            android:text="@string/opt3c" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/dimen_4dp"
                            android:text="@string/opt3d" />
                    </RadioGroup>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView style="@style/CardView.Question">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/que_4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif-light"
                        android:padding="@dimen/dimen_16dp"
                        android:text="@string/que4"
                        android:textSize="@dimen/dimen_24sp" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/que_4"
                        android:layout_marginBottom="@dimen/dimen_16dp"
                        android:layout_marginStart="@dimen/dimen_16dp">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dimen_8dp"
                            android:padding="@dimen/dimen_4dp"
                            android:text="@string/opt4a" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dimen_8dp"
                            android:padding="@dimen/dimen_4dp"
                            android:text="@string/opt4b" />

                        <RadioButton
                            android:id="@+id/ans4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dimen_8dp"
                            android:padding="@dimen/dimen_4dp"
                            android:text="@string/opt4c" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/dimen_4dp"
                            android:text="@string/opt4d" />
                    </RadioGroup>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <!--Button to check the correct option and go to new activity having question set 2-->
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:src="@drawable/ic_next" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_176dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>